Fixed rating searches to include results in between what the user entered and the next whole number, added spacing to deck list links

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -130,6 +130,7 @@ main.container {
   flex-grow: 1;
   overflow: hidden;
   text-overflow: ellipsis;
+  margin-top: 1rem;
 }
 
 .deck-buttons {
@@ -156,6 +157,10 @@ main.container {
   label {
     font-size: 85%;
   }
+}
+
+.starability-result {
+  min-height: 30px;
 }
 
 // Deck header partial styles
